button color is changed

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
        </tr>
        <tr>
            <td></td>
-           <td><button class="btn btn-info">SUBMIT</button></td>
+           <td><button class="btn btn-primary">SUBMIT</button></td>
        </tr>
     </table>
 </body>
